# bavardage-vala

./: CMakeLists.txt  README.md  org.bavardage.client.gschema.xml
cmake/: project.cmake
src/: CMakeLists.txt  Config.vala  Config.vala.cmake
src/Client/: CMakeLists.txt  Client  Client.vala
src/Client/Widgets/: Chat.vala  MainWindow.vala  NewAccount.vala
src/Server/: CMakeLists.txt  Server.vala
src/Services/: Account.vala  Message.vala
